[project]
name = "safety-gym-rl"
version = "0.1.0"
description = "A-parameter hypothesis testbed using Safety Gym adversarial continuous control"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "safety-gymnasium",
]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
numpy = "*"
matplotlib = "*"
pytorch = "*"

[tool.pixi.pypi-dependencies]
safety-gymnasium = "*"

[tool.pixi.tasks]
selfplay = "python train_selfplay.py --timesteps 300000"
sweep = "python run_sweep.py --timesteps 300000 --seeds 3"
analyze = "python analyze.py experiments/results/"
